<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpu_stereo_image_proc_libsgm</name>
  <version>1.0.1</version>
  <description>Stereo disparity processing by using Fixstars libSGM. Edited 11/18/22 by Mitchell Scott (miscott@uw.edu) for ros2</description>
  <author>Seiya Shimizu</author>
  <maintainer email="shimizu@whill.jp">Seiya Shimizu</maintainer>
  <license>BSD</license>
  <url>https://github.com/WHILL/gpu_stereo_image_proc</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <test_depend>rostest</test_depend> -->

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>opencv_apps</build_depend>
  <build_depend>gpu_stereo_image_proc_common</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>gpu_stereo_image_proc_common</exec_depend>

  <!-- <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_geometry</depend>
  <depend>image_proc</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>opencv_apps</depend>
  <depend>gpu_stereo_image_proc_common</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <rosdoc config="rosdoc.yaml" /> -->
    <!-- <nodelet plugin="${prefix}/nodelet_plugins.xml" /> -->
  </export>

</package>
